--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profilePic.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Nolberto Arroyo</span>
                         <hr class="star-light">
-                        <span class="skills">Android Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Android Developer - Problem Solver - Creative Thinker</span>
                     </div>
                 </div>
             </div>
@@ -249,19 +249,13 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
                                 <a href="https://github.com/nolbertoarroyo" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/nolbertoarroyo" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://profiles.generalassemb.ly/profiles/nolberto-arroyo" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -305,7 +299,7 @@
                         <div class="modal-body">
                             <h2>Plans Nearby</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/plansPhone1.jpg" class="img-responsive img-centered" alt="">
                             <p> Plans Nearby helps users find things to do in their  area by displaying events and popular places to go using their current location or city input.  App uses Foursquare API, Facebook SDK, and Eventbrite API. Available in the <a href="https://play.google.com/store/apps/details?id=com.arroyo.b.plansnearby">Play Store</a>.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -342,7 +336,7 @@
                         <div class="modal-body">
                             <h2>Vice 2.0</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/vicetemp.jpg" class="img-responsive img-centered" alt="">
                             <p>Vice 2.0 uses Vice News API to display current articles from various categories. Users can save articles they like to read offline, and can share articles on facebook. Project available on <a href="https://github.com/nolbertoarroyo/Vice-Project">Github page</a>. </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
