--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <div class="modal-body">
                             <h2>Vice 2.0</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/vicetemp.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/viceTemp.jpg" class="img-responsive img-centered" alt="">
                             <p>Vice 2.0 uses Vice News API to display current articles from various categories. Users can save articles they like to read offline, and can share articles on facebook. Project available on <a href="https://github.com/nolbertoarroyo/Vice-Project">Github page</a>. </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
