--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -96,7 +96,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <h1><center>Plans Nearby</center></h1>
                             </div>
                         </div>
                         <img src="img/portfolio/PlansNearbyTag.jpg" class="img-responsive" alt="">
@@ -106,7 +106,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <h1><center>Vice 2.0</center></h1>
                             </div>
                         </div>
                         <img src="img/portfolio/vice2.png" class="img-responsive" alt="">
@@ -116,40 +116,10 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                                <h1><center>My J's</center></h1>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/mjsLogo.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -161,19 +131,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About Me</h2>
+                    <h2><font color=#fff>About Me</font></h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> I am a detail oriented self starter with a passion for finding and solving complex problems. My interests are android development, new technology and business. I love creating new applications and turning ideas into reality.</p>
+                    <p> I am a detail oriented self starter with a passion for finding and solving complex problems. My interests are android development, new technology and business. I love taking on new creating new applications and turning ideas into reality.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I am looking to for a career in Android Development where I can use my analytical and problem solving skills to contribute in building awesome user friendly apps.</p>
+                    <p>I am looking for a career in Android Development where I can use my problem solving skills to contribute in building user friendly apps. I am a self starter who is always looking for a new challenge.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://docs.google.com/document/d/14a2m2mG3yYLldg2vazn425fAs-BAZkTq7zBiAy1jRj0/edit" class="btn btn-lg btn-outline">
+                    <a href="https://docs.google.com/document/d/14a2m2mG3yYLldg2vazn425fAs-BAZkTq7zBiAy1jRj0/edit?usp=sharing" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> View My Resume
                     </a>
                 </div>
@@ -260,7 +230,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
+                        <h3>Credits</h3>
                         <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
                     </div>
                 </div>
@@ -270,7 +240,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Nolberto Arroyo 2016
                     </div>
                 </div>
             </div>
@@ -298,20 +268,20 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Plans Nearby</h2>
-                            <hr class="star-primary">
+                            <hr class="star-two">
                             <img src="img/portfolio/plansPhone1.jpg" class="img-responsive img-centered" alt="">
                             <p> Plans Nearby helps users find things to do in their  area by displaying events and popular places to go using their current location or city input.  App uses Foursquare API, Facebook SDK, and Eventbrite API. Available in the <a href="https://play.google.com/store/apps/details?id=com.arroyo.b.plansnearby">Play Store</a>.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Project Page:
+                                    <strong><a href="https://github.com/nolbertoarroyo/PlansNearBy">Github</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="https://github.com/nolbertoarroyo/PlansNearBy">September 2016</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>General Assembly:
+                                    <strong><a href="https://github.com/nolbertoarroyo/PlansNearBy">Project 4</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -335,20 +305,20 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Vice 2.0</h2>
-                            <hr class="star-primary">
+                            <hr class="star-two">
                             <img src="img/portfolio/viceTemp.jpg" class="img-responsive img-centered" alt="">
-                            <p>Vice 2.0 uses Vice News API to display current articles from various categories. Users can save articles they like to read offline, and can share articles on facebook. Project available on <a href="https://github.com/nolbertoarroyo/Vice-Project">Github page</a>. </p>
+                            <p>Vice 2.0 uses Vice News API to display current articles from various categories. Users can save articles they like to read offline, and can share articles on facebook. This is a group project for the General Assembly immersive program.  This application was completed in a week long sprint in a group of 3. Project available on <a href="https://github.com/nolbertoarroyo/Vice-Project">GitHub page</a>. </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Project Page:
+                                    <strong><a href="https://github.com/nolbertoarroyo/Vice-Project">Github</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="https://github.com/nolbertoarroyo/Vice-Project">August 2016</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>General Assembly:
+                                    <strong><a href="https://github.com/nolbertoarroyo/Vice-Project">Project 3</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -372,20 +342,20 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>My J's</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <hr class="star-two">
+                            <img src="img/portfolio/myJsPortfolio.jpg" class="img-responsive img-centered" alt="">
+                            <p>My J's is my second project in the General Assembly immersive program.  Our task was to make a commerce app and use the skills learned in the first month of class.  I used a viewPager, SQLite database, intents, and fragments to complete the project. users can search for shoes by year or color. Great learning experience to get started.  Code available on <a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">GitHub</a>.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Project Page:
+                                    <strong><a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">Github</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">June 2016</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>General Assembly:
+                                    <strong><a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">Project 2</a>
                                     </strong>
                                 </li>
                             </ul>
