--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> I am a detail oriented self starter with a passion for finding and solving complex problems. My interests are android development, new technology and business. I love taking on new creating new applications and turning ideas into reality.</p>
+                    <p> I am a detail oriented self starter with a passion for finding and solving complex problems. My interests are android development, new technology and business. I love taking on new challenges by creating new applications, and turning ideas into reality.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I am looking for a career in Android Development where I can use my problem solving skills to contribute in building user friendly apps. I am a self starter who is always looking for a new challenge.</p>
+                    <p>I am looking for a career in Android Development where I can use my problem solving skills to contribute in building user friendly applications. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://docs.google.com/document/d/14a2m2mG3yYLldg2vazn425fAs-BAZkTq7zBiAy1jRj0/edit?usp=sharing" class="btn btn-lg btn-outline">
