deleted line in my js

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             <h2>My J's</h2>
                             <hr class="star-two">
                             <img src="img/portfolio/myJsPortfolio.jpg" class="img-responsive img-centered" alt="">
-                            <p>My J's is my second project in the General Assembly immersive program.  Our task was to make a commerce app and use the skills learned in the first month of class.  I used a viewPager, SQLite database, intents, and fragments to complete the project. users can search for shoes by year or color. Great learning experience to get started.  Code available on <a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">GitHub</a>.</p>
+                            <p>My J's is my second project in the General Assembly immersive program.  Our task was to make a commerce app and use the skills learned in the first month of class.  I used a viewPager, SQLite database, intents, and fragments to complete the project. Users can search for shoes by year or color. Code available on <a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">GitHub</a>.</p>
                             <ul class="list-inline item-details">
                                 <li>Project Page:
                                     <strong><a href="https://github.com/nolbertoarroyo/adi-2-resources/tree/project-2/projects/project-02/MyJ's">Github</a>
